--- a/src/style.css
+++ b/src/style.css
@@ -38,14 +38,13 @@ button {
 
 /* section style starts */
 #todoList-section {
-  background: none;
   max-width: 500px;
   width: 90%;
   display: flex;
   flex-direction: column;
   margin: 100px auto;
   background: #fff;
-  box-shadow: 0px 4px 20px 0px rgba(168, 168, 168, 0.54);
+  box-shadow: 0 4px 20px 0 rgba(168, 168, 168, 0.54);
 }
 
 /* header */
@@ -76,15 +75,15 @@ ul {
   list-style-type: none;
 }
 
+ul li {
+  padding: 15px 13px;
+  border-bottom: 2px solid #f0f0f0;
+}
+
 .to-do-list li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-ul li {
-  padding: 15px 13px;
-  border-bottom: 2px solid #f0f0f0;
 }
 
 .check-list {
