--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,22 @@
 }
 
 body {
-  background: #f0f0f0;
   font-family: sans-serif;
+  width: 100%;
+}
+
+.heading-bg {
+  background: url(./images/vasebook.png.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
 
 .fa-arrow-turn-down {
@@ -18,6 +32,10 @@ body {
 i {
   font-size: 16px;
   color: #9c9c9c;
+}
+
+i:hover {
+  color: #000;
 }
 
 input[type="text"] {
@@ -43,8 +61,9 @@ button {
   display: flex;
   flex-direction: column;
   margin: 100px auto;
-  background: #fff;
-  box-shadow: 0 4px 20px 0 rgba(168, 168, 168, 0.54);
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.87);
+  box-shadow: 2px 2px 5px 0 rgba(124, 117, 117, 0.54);
 }
 
 /* header */
@@ -52,8 +71,8 @@ button {
   display: flex;
   justify-content: space-between;
   padding: 15px 13px;
-  border-bottom: 2px solid #f0f0f0;
-  color: #7a7575;
+  border-bottom: 2px solid #f09db6;
+  color: #636060;
 }
 
 /* Add to your list */
@@ -61,7 +80,7 @@ button {
   display: flex;
   justify-content: space-between;
   padding: 15px 13px;
-  border-bottom: 2px solid #f0f0f0;
+  border-bottom: 2px solid #f09db6;
 }
 
 form #add-item {
@@ -77,7 +96,7 @@ ul {
 
 ul li {
   padding: 15px 13px;
-  border-bottom: 2px solid #f0f0f0;
+  border-bottom: 2px solid #f09db6;
 }
 
 .to-do-list li {
@@ -94,7 +113,7 @@ ul li {
 #btn {
   padding: 15px 13px;
   text-align: center;
-  background: #f0f0f0;
+  background: #f09db6;
 }
 
 #btn #clear-btn {
@@ -103,5 +122,5 @@ ul li {
 }
 
 #btn #clear-btn:hover {
-  color: #000;
+  color: #fff;
 }
