--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .heading-bg {
-  background: url(./images/vasebook.png.jpg);
+  background: url(./images/vasebook1.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
